# erl_json

./: .drone.yml  .gitignore  LICENSE  README.md  rebar.config
.github/workflows/: erlang.yml  test.yml
doc/: edoc-info  erl_json.html  index.html  modules-frame.html  overview-summary.html
lib_json/: Cargo.toml
lib_json/src/: lib.rs
src/: erl_json.app.src  erl_json.erl
test/: erl_json_SUITE.erl
